--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=literalura
+spring.datasource.url = jdbc:postgresql://${db_host}/literalura
+spring.datasource.username = ${db_user}
+spring.datasource.password = ${db_password}
+spring.datasource.driver-class-name = org.postgresql.Driver
+hibernate.dialect = org.hibernate.dialect.HSQLDialect
+
+spring.jpa.hibernate.ddl-auto = update
+
+spring.jpa.show-sql = true
+spring.jpa.format-sql = true
+
+
+
+
+
+
+
+#Si deseas cambiar el puerto del servidor de spring
+#server.port = 8080
